cloudformation/network.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: CCC Fleet - Network & Security Groups

Parameters:
  FleetName:
    Type: String
    Description: Fleet name prefix for all resources
  VpcCidr:
    Type: String
    Default: '10.0.0.0/16'
    Description: VPC CIDR block
  AdminIp:
    Type: String
    Description: Admin IP CIDR for SSH access (e.g. 1.2.3.4/32)

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub '${FleetName}-vpc'

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub '${FleetName}-igw'

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select [0, !Cidr [!Ref VpcCidr, 4, 8]]
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub '${FleetName}-public-a'

  PublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select [1, !Cidr [!Ref VpcCidr, 4, 8]]
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub '${FleetName}-public-b'

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub '${FleetName}-rt'

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: '0.0.0.0/0'
      GatewayId: !Ref InternetGateway

  SubnetARouteAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetA
      RouteTableId: !Ref RouteTable

  SubnetBRouteAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetB
      RouteTableId: !Ref RouteTable

  WorkerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub '${FleetName} worker instances'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref AdminIp
          Description: SSH from admin
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupId: !Ref ProxySecurityGroup
          Description: API from proxy
      Tags:
        - Key: Name
          Value: !Sub '${FleetName}-worker-sg'

  ProxySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: !Sub '${FleetName} nginx proxy'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref AdminIp
          Description: SSH from admin
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: '0.0.0.0/0'
          Description: HTTP
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: '0.0.0.0/0'
          Description: HTTPS
      Tags:
        - Key: Name
          Value: !Sub '${FleetName}-proxy-sg'

Outputs:
  VpcId:
    Value: !Ref VPC
    Export:
      Name: !Sub '${FleetName}-VpcId'
  PublicSubnetA:
    Value: !Ref PublicSubnetA
    Export:
      Name: !Sub '${FleetName}-PublicSubnetA'
  PublicSubnetB:
    Value: !Ref PublicSubnetB
    Export:
      Name: !Sub '${FleetName}-PublicSubnetB'
  WorkerSecurityGroup:
    Value: !GetAtt WorkerSecurityGroup.GroupId
    Export:
      Name: !Sub '${FleetName}-WorkerSG'
  ProxySecurityGroup:
    Value: !GetAtt ProxySecurityGroup.GroupId
    Export:
      Name: !Sub '${FleetName}-ProxySG'
